--- a/2/index.html
+++ b/2/index.html
@@ -18,7 +18,7 @@
 <div class="wraperrr">
 	<header id="home">
 		<div class="container top">
-			<div class="row no-gutters">
+			<div class="row no-gutters mr">
 				<div class="col-xl-1 col-lg-1 col-md-12 col-2">
 					<img src="image/logo.png" alt="logotype">
 					<div class="text">
